--- a/index.html
+++ b/index.html
@@ -28,44 +28,45 @@
 </head>
 
 <body class="h-lvh flex flex-col m-auto">
-  <header class=" flex justify-between w-11/12 mx-auto mt-5 md:w-11/12">
-    <img class="w-[100px] md:w-[200px]" src="/images/logo.svg" alt="logo" />
+  <header class=" flex justify-between w-11/12 mx-auto mt-5 md:mt-14 ">
+    <img class="w-[100px] md:w-[150px]" src="/images/logo.svg" alt="logo" />
     <nav class="flex">
       <ul class="flex gap-7 content-center md:gap-16">
-        <li><a class="font-raleway-400 text-[#585989] md:text-xl" href="#">Features</a></li>
-        <li><a class="font-raleway-400 text-[#585989] md:text-xl" href="#">Team</a></li>
-        <li><a class="font-raleway-400 text-[#585989] md:text-xl" href="#">Sign In</a></li>
+        <li><a class="font-raleway-400 text-[#585989] md:text-sm md:font-medium md:tracking-tight" href="#">Features</a></li>
+        <li><a class="font-raleway-400 text-[#585989] md:text-sm md:font-medium md:tracking-tight" href="#">Team</a></li>
+        <li><a class="font-raleway-400 text-[#585989] md:text-sm md:font-medium md:tracking-tight" href="#">Sign In</a></li>
       </ul>
     </nav>
   </header>
-<section class="md:flex">
-<div class="mt-28  md:w-3/6 md:order-2">
-  <img class="max-w-full" src="/images/illustration-1.svg">
-</div>
+<section class="mt-28 md:flex md:gap-x-12 md:mt-16 md:px-14">
+  <div class="md:w-6/12 md:order-2">
+    <img class="max-w-full" src="/images/illustration-1.svg">
+  </div>
 
-<div class="flex flex-col md:justify-center md:w-3/6 md:order-1">
-  <h1 class="text-4xl text-[#070439] text-center md:text-left flex justify-between w-11/12 mx-auto mt-5">
-  All your files in one secure location, accessible anywhere.
-</h1>
+  <div class="flex flex-col w-full md:justify-center md:w-6/12 md:order-1">
+    <h1 class="text-4xl text-[#070439] text-center flex justify-between w-11/12 mx-auto mt-5 font-bold md:text-left md:tracking-tight md:w-full md:leading-relaxed">
+    All your files in one secure location, accessible anywhere.
+    </h1>
 
-<p class="text-lg text-[#585989] text-center md:text-left flex justify-between w-11/12 mx-auto mt-12">
-  Fylo stores your most important files in one secure location.
-  Access them wherever you need, share and collaborate with friends,
-  family, and co-workers.
-</p>
+    <p class="text-lg text-[#585989] text-center flex justify-between w-11/12 mx-auto mt-12 md:text-left md:w-full md:mt-6 md:leading-5 md:text-sm md:font-semibold">
+      Fylo stores your most important files in one secure location.
+      Access them wherever you need, share and collaborate with friends,
+      family, and co-workers.
+    </p>
 
-<div class="flex flex-col md:flex md:flex-row md:w-10/12 md:ml-4">
-  <form class="flex flex-col max-w-full md:w-8/12">
-    <input class="border border-1 border-[#070439]  w-11/12 mx-auto mt-3 pl-3 py-2 rounded-md placeholder-gray-300 md:my-4 md:py-3 "
-      placeholder="Enter your email">
-  </form>
-  
-  <button class="bg-[#3065F8] w-11/12 mx-auto mt-4 text-white p-3 rounded-md mb-30 md:my-4 md:w-4/12">
-    Get Started
-  </button>
-</div>
+    <div class="flex flex-col md:flex  ">
+      <form class="flex flex-col max-w-full md:flex-row md:w-11/12">
+        <input class="border border-1 border-[#070439]  w-11/12 mx-auto mt-3 pl-3 py-2 rounded-md placeholder-gray-300 md:my-4 md:w-7/12 md:py-1 md:rounded-sm md:mx-0"
+          placeholder="Enter your email">
+        <button class="bg-[#3065F8] w-11/12 mx-auto mt-4 text-white p-3 rounded-md mb-30 md:my-4 md:w-4/12 md:text-xs md:py-1 md:rounded-sm">
+          Get Started
+        </button>
+      </form>
+      
+      
+    </div>
 
-</div>
+  </div>
 </section>
 
 
