--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </ul>
     </nav>
   </header>
-<section class="mt-28 md:flex md:gap-x-12 md:mt-16 md:px-14">
+<section class="mt-28 md:flex md:gap-x-12 md:mt-16 md:mb-20 md:px-14">
   <div class="md:w-6/12 md:order-2">
     <img class="max-w-full" src="/images/illustration-1.svg">
   </div>
@@ -70,51 +70,53 @@
 </section>
 
 
-<div class="bg-[#F9F8FE]">
-
-  <section class="mt-28">
+<div class="bg-[#F9F8FE] md:flex md:gap-x-6 md:mt-16 md:px-14">
+  <section class="mt-28 md:order-2 md:w-7/12">
     <img class="max-w-full" src="/images/illustration-2.svg">
   </section>
 
-  <h2 class="text-2xl text-[#070439] text-center flex justify-between w-11/12 mx-auto font-semibold mt-24">
+  <div class="md:order-1">
+    <h2 class="text-2xl text-[#070439] text-center flex justify-between w-11/12 mx-auto font-semibold mt-24 md:text-left md:font-bold md:text-4xl md:mx-0 md:w-full">
     Stay productive, wherever you are
-  </h2>
+    </h2>
 
-  <p class="text-lg text-[#585989] text-left flex justify-between w-11/12 mx-auto mt-12">
+    <p class="text-lg text-[#585989] text-left flex justify-between w-11/12 mx-auto mt-12 md:text-left md:mt-6 md:leading-5 md:text-sm md:font-semibold md:tracking-tight md:w-9/12 md:ml-0">
     Never let location be an issue when accessing your files. Fylo has you
     covered for all of your file storage needs.
-  </p>
+    </p>
 
 
-  <p class="text-lg text-[#585989] text-left flex justify-between w-11/12 mx-auto my-6">
+    <p class="text-lg text-[#585989] text-left flex justify-between w-11/12 mx-auto my-6 md:text-left md:mt-6 md:leading-5 md:text-sm md:font-semibold md:tracking-tight md:w-9/12 md:ml-0">
     Securely share files and folders with friends, family and colleagues for
     live collaboration. No email attachments required!
-  </p>
+    </p>
 
-  <button class="flex items-center w-fit border-b-2 border-[#3C9F8F] pb-1 m-auto mb-10">
+    <button class="flex items-center w-fit border-b-2 border-[#3C9F8F] pb-1 m-auto mb-10 md:ml-0">
     <p class="text-[#3C9F8F] mr-2"> See how Fylo works</p>
     <img class="align-baseline" src="/images/icon-arrow.svg" alt="arrow">
-  </button>
+    </button>
 
 
-  <div class="bg-white w-4/5 mx-auto p-5 rounded-lg shadow-inner mb-24">
-    <p>
-      <q class="text-base text-[#44456A] text-left flex justify-between w-11/12 mx-auto my-6"">
-        Fylo has improved our team productivity by an order of magnitude. Since
-        making the switch our team has become a well-oiled collaboration machine.
-      </q>
-    </p>
-    <div>
-      <div class=" flex">
-        <img class="inline-block h-10 w-10 rounded-full mx-3 my-auto" src="/images/avatar-testimonial.jpg" />
-        <div class="flex flex-col justify-center">
-          <p class="text-base text-[#44456A] font-bold ">Kyle Burton</p>
-          <p class="text text-[#44456A] text-xs">
-            Founder & CEO, Huddle
-          </p>
+      <div class="bg-white w-4/5 mx-auto p-5 rounded-lg shadow-inner mb-24 md:ml-0 md:w-6/12 ">
+    
+        <p class="text-base text-[#44456A] text-left flex justify-between w-11/12 mx-auto my-6 md:leading-5 md:text-xs">
+          Fylo has improved our team productivity by an order of magnitude. Since
+          making the switch our team has become a well-oiled collaboration machine.
+        </p>
+    
+      <div>
+        <div class=" flex">
+          <img class="inline-block h-10 w-10 rounded-full mx-3 my-auto" src="/images/avatar-testimonial.jpg" />
+          <div class="flex flex-col justify-center">
+            <p class="text-base text-[#44456A] font-bold ">Kyle Burton</p>
+            <p class="text text-[#44456A] text-xs">
+              Founder & CEO, Huddle
+            </p>
+          </div>
         </div>
+      </div>
+    </div>
   </div>
-</div>
 </div>
 
 <div class="bg-[#575985] flex flex-col text-white justify-center mx-auto text-center p-5 pt-10">
